--- a/game.html
+++ b/game.html
@@ -2,54 +2,7 @@
 <html lang="en">
   <head>
     <title>X O</title>
-    <style>
-      h1 {
-        font-family: monospace;
-      }
-
-      .container {
-        width: 500px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin: auto;
-      }
-
-      .box {
-        width: 150px;
-        height: 150px;
-        background-color: teal;
-        margin: 1px;
-        border-radius: 10px;
-        transition: 0.5 all;
-        border: 10px, solid, teal;
-        animation-name: anim;
-        animation-duration: 4s;
-        box-shadow: 4px, 4px plum;
-      }
-
-      div:hover {
-        border-left: turquoise;
-      }
-
-      @keyframes anim {
-        0% {
-          background-color: teal;
-        }
-        25% {
-          background-color: rgb(69, 139, 57);
-        }
-        50% {
-          background-color: rgb(61, 61, 104);
-        }
-        100% {
-          background-color: rgb(158, 215, 158);
-        }
-      }
-
-      /* justify is used for the x axis. align for the y axis */
-    </style>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
 
   <body>
